--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@
 .modal-content {
   border: 2px solid hsla(200, 100%, 50%);
   height: 400px;
-  width: 400px;
+  width: 500px;
   position: relative;
   background-color: #3f3f3f;
   padding: 20px;
@@ -144,10 +144,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-
   margin: 0;
-
 }
 
 .modal-image {
@@ -163,17 +160,35 @@
   align-self: flex-end;
   display: flex;
   gap: 5px;
+  margin-top: 5px;
   justify-content: center;
   align-items: end;
 }
 
-.modal-navigation button {
+.modal-navigation .next {
   background: none;
-  border: none;
-  color: #333;
   font-size: 24px;
+  background-color: hsla(200, 100%, 50%, 0.1);
+  border: 1px solid hsla(200, 100%, 50%);
+  color: hsla(200, 100%, 50%);
+  padding: 0.25em 0.5em;
+  border-radius: 0.25em;
   cursor: pointer;
+  outline: none;
 }
+
+
+.next:hover,
+.next:focus-visible {
+  transform: translateY(-2px);
+  background: hsla(200, 100%, 50%, 0.2);
+}
+
+
+.next:active {
+  background: hsla(200, 100%, 50%, 0.3);
+}
+
 
 /*stop
 
@@ -195,11 +210,22 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  bottom:20px;
+  bottom: 20px;
   gap: 5px;
   width: 100%;
   height: 10px;
   z-index: 2000;
+}
+
+.expand {
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition:transform 0.3s ease-in;
+}
+
+.expand:hover{
+  background-color: rgba(189, 195, 199,0.5);
 }
 
 .white-balls {
@@ -218,8 +244,33 @@
   position: relative;
   overflow: hidden;
   opacity: 1;
-  transition: opacity 0.5s ease-in-out ;
+  transition: opacity 0.5s ease-in-out;
 
+}
+
+.loading-carcard{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.my-loading{
+  height: 50px;
+  width: 50px;
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-top: 8px solid hsla(200, 100%, 50%);
+  border-radius:50% ;
+  animation: spin 1s linear infinite;
+
+}
+
+@keyframes spin{
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .carcard-image {
@@ -228,12 +279,12 @@
   position: sticky;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   overflow: hidden;
 }
 
-.image-container.sliding{
-  opacity:0.2
+.image-container.sliding {
+  opacity: 0.2
 }
 
 .marka {
@@ -731,21 +782,21 @@ front .model-clicked li:last-child {
   list-style-type: none;
 }
 
-.scroll-menu{
-  display:flex;
+.scroll-menu {
+  display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
 }
 
-.cars-options{
+.cars-options {
   display: flex;
   justify-content: space-between;
-  width:auto;
+  width: auto;
 }
 
 
-.car-options-buttons{
+.car-options-buttons {
   border-radius: 40px !important;
   cursor: pointer;
   padding-left: 20px !important;
@@ -791,14 +842,15 @@ label {
 
 input[type="checkbox"] {
   cursor: pointer;
-  transform: scale(1.5); 
+  transform: scale(1.5);
 }
+
 /* stop */
 .buying {
   justify-content: flex-end;
 }
 
-.buying-guest{
+.buying-guest {
   justify-content: flex-start;
 }
 
@@ -1063,6 +1115,11 @@ nav.home {
   transition: ease-out 0.4s;
 }
 
+/* 
+.burger.unclicked:nth-child(3){
+  height: 2.5px ;
+} */
+
 .burger.unclicked {
   transform: rotate(0) translate(0);
   transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
@@ -1316,6 +1373,10 @@ In {
   font-size: 0.9em;
 }
 
+.add-error .warning{
+  color: yellow;
+}
+
 .error {
   display: flex;
   justify-content: center;
@@ -1326,9 +1387,9 @@ body .good-sign-in {
   color: green;
   display: flex;
   justify-content: flex-start;
-  font-size: 0.7em;
+  font-size: 0.8em;
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 btn .prezantimi-register {
@@ -1359,7 +1420,7 @@ btn .prezantimi-register {
   display: flex;
   flex-direction: column;
   border-radius: 1px;
-  margin-top: 50px;
+  margin-top: 10px;
   align-items: center;
   justify-content: center;
   height: auto;
