--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
   border-radius: 50px;
   cursor: pointer;
   outline: none;
+  align-self: center;
   transition: 0.3s;
 }
 
@@ -197,7 +198,7 @@
 .card-png {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   gap: 1px;
   height: 240px;
   width: auto;
