--- a/src/App.css
+++ b/src/App.css
@@ -280,7 +280,7 @@
   position: sticky;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  /* object-fit: contain; */
   overflow: hidden;
 }
 
@@ -976,9 +976,14 @@ input[type="checkbox"] {
 }
 
 .sell.ul {
-  margin: 0 !important;
+  margin: 0 ;
   width: 200px;
   padding: 20px;
+}
+
+.margined{
+  margin-left: 70px !important;
+
 }
 
 .cars-ul {
