--- a/src/App.css
+++ b/src/App.css
@@ -487,12 +487,13 @@
 
 .filter {
   top: 70px;
-  width: 370px;
+  width: 100%;
   height: 150px;
   position: absolute;
   display: flex;
-  justify-content: first baseline;
-  align-items: start;
+  justify-content: flex-start;
+  /* align-items: start; */
+  padding-left: 20px;
 }
 
 .dealers-menu {
@@ -501,7 +502,7 @@
 }
 
 .model-clicked {
-  justify-self: flex-end;
+  /* justify-self: flex-end; */
   cursor: pointer;
   overscroll-behavior: contain;
   overflow-x: hidden;
@@ -511,18 +512,17 @@
   transform-style: preserve-3d;
   background-color: #555;
   /* top: 35px; */
-  height: 173px;
-
-  width: 150px;
+  /* height: 173px; */
+  width: 160px;
   border-radius: 5%;
   border: 1px solid #ccc;
   z-index: 1002;
   box-shadow: 0 10px 10px (0, 0, 0, 0.1);
 }
-
+/* 
 .model-clicked.custom {
   height: 219px;
-}
+} */
 
 .model-clicked:hover {
   transition: opacity ease-in-out 0.2s;
@@ -531,12 +531,12 @@
 
 .model-clicked li {
   border-radius: 5%;
-  margin: 5px 5px 0 5px;
+  margin-top: 5px ;
   width: 100%;
   cursor: pointer;
   position: relative;
   display: flex;
-  justify-content: left;
+  justify-content: center;
   /* padding: 15px; */
   border-bottom: 1px solid #ddd;
 }
@@ -559,6 +559,7 @@ front .model-clicked li:last-child {
 }
 
 .vehicle-unclicked {
+  width:160px;
   visibility: hidden;
 }
 
@@ -576,23 +577,23 @@ front .model-clicked li:last-child {
   border-radius: 5%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   list-style: none;
-  width: 170px;
-  padding-right: 20px;
+  width: 160px;
+  /* padding-right: 20px; */
 }
 
 .vehicle-clicked li {
   border-radius: 5%;
-  margin: 5px 5px 0 5px;
+  margin-top: 5px ;
   width: 100%;
   cursor: pointer;
   position: relative;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   border-bottom: 1px solid #ddd;
 }
 
-.vehicle-clicked li:last-child {
+front .vehicle-clicked li:last-child {
   border-bottom: none;
   margin-bottom: 10px;
 }
